# teststs

./: LICENSE  README.md  setup.cfg  setup.py  teststs.py
.github/workflows/: publish.yml
teststs/: __init__.py
