[metadata]
name = teststs
version = 0.1.0
author = Kanowara Sinoka
author_email = sinok@sinoka.dev
description = A Simple, Tiny Test Library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sinokadev/teststs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
